fix scroll overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
 html, body{
   font-family: raleway-extrabold;
   height: 100%;
+  overflow-x: hidden;
 }
 
 h1,h2,h3,h5,h6 {
